RETINA layer implemented.

--- a/public/index.html
+++ b/public/index.html
@@ -18,22 +18,19 @@
         </center>
     </div>
     <div class="container">
-        <p>This is super simple simulation of how human brain proceses visual data. This ismualtion will have 25 pixels.</p>
+        <p>This is super simple simulation of how human brain proceses visual data. It is designed to work only with digits.</p>
+        <p>Drag a mouse with pressed left button to be able to draw. Drag a mouse with right button pressed to be able to delete. Main rule - digit should take space 3 x 5.</p>
     </div>
     <canvas width="500" height="500" id="eye"></canvas>
+    <div class="container">
+        <input type="button" id="go" class="go-button" value="Compute">
+    </div>
 
     <script type="module" src="/dist/index.js"></script>
     <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-
 </body>
 
 </html>
