IT layer distinguish rules added.

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,13 @@
         <p>This is super simple simulation of how human brain proceses visual data. It is designed to work only with digits.</p>
         <p>Drag a mouse with pressed left button to be able to draw. Drag a mouse with right button pressed to be able to delete. Main rule - digit should take space 3 x 5.</p>
     </div>
-    <canvas width="500" height="500" id="eye"></canvas>
+    <div class="container screen">
+        <canvas width="500" height="500" id="eye"></canvas>
+        <div>
+            <h2>IT layer output:</h2>
+            <div id="output"></div>
+        </div>
+    </div>
     <div class="container">
         <input type="button" id="go" class="go-button" value="Compute">
     </div>
