--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,9 @@
         <p>Drag a mouse with pressed left button to be able to draw. Drag a mouse with right button pressed to be able to delete. Main rule - digit should take space 3 x 5.</p>
     </div>
     <div class="container screen">
-        <canvas width="500" height="500" id="eye"></canvas>
+        <div>
+            <canvas width="500" height="500" id="eye"></canvas>
+        </div>
         <div>
             <h2>IT layer output:</h2>
             <div id="output"></div>
