--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,16 @@
         <div>
             <canvas width="500" height="500" id="eye"></canvas>
         </div>
-        <div>
-            <h2>IT layer output:</h2>
-            <div id="output"></div>
+        <div class="flex-col">
+            <h2>Computed result:</h2>
+            <div class="flex-row">
+                <h4>IT layer:</h4>
+                <div id="output-it" class="flex-row"></div>
+            </div>
+            <div class="flex-row">
+                <h4>V2 layer:</h4>
+                <div id="output-v2" class="flex-row"></div>
+            </div>
         </div>
     </div>
     <div class="container">
