--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-snowpack-app" />
-    <link rel="stylesheet" type="text/css" href="/index.css" />
+    <link rel="stylesheet" type="text/css" href="./index.css" />
     <title>Snowpack App</title>
 </head>
 
@@ -41,7 +41,7 @@
         <input type="button" id="go" class="go-button" value="Compute">
     </div>
 
-    <script type="module" src="/dist/index.js"></script>
+    <script type="module" src="./dist/index.js"></script>
     <!--
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
